recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:5: error: overloaded method value <= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (List[Int])
  if(l.head <= l.tail)
            ^Min:8: error: value <= is not a member of List[Int]
  if(l.tail <= l.head)
            ^Min:8: error: type mismatch;
 found   : Unit
 required: Int
  if(l.tail <= l.head)
  ^